--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     
-  <p>First paragraph</p>
+     <p>First paragraph</p>
   
+    <p>This is a another paragraph.</p>
 </body>
 </html>
